  execution). (Dmitry)
- Fixed bug #38194 (ReflectionClass::isSubclassOf() returns TRUE for the class
  itself). (Ilia)
- Fixed bug #38173 (Freeing nested cursors causes OCI8 to segfault). (Tony)
- Fixed bug #38168 (Crash in pdo_pgsql on missing bound parameters). (Ilia)
- Fixed bug #38132 (ReflectionClass::getStaticProperties() retains \0 in key
  names). (Ilia)
- Fixed bug #38047 ("file" and "line" sometimes not set in backtrace from
  inside error handler). (Dmitry)
- Fixed bug #37846 (wordwrap() wraps incorrectly). (ddk at krasn dot ru, Tony)
- Fixed bug #37581 (oci_bind_array_by_name clobbers input array when using 
  SQLT_AFC, AVC). (Tony)
- Fixed bug #37564 (AES privacy encryption not possible due to net-snmp 5.2
  compatibility issue). (Jani, patch by scott dot moynes+php at gmail dot com)
- Fixed bug #37445 (Fixed crash in pdo_mysql resulting from premature object
  destruction). (Ilia)
- Fixed bug #37265 (Added missing safe_mode & open_basedir checks to
  imap_body()). (Ilia)

24 Jul 2006, PHP 5.2.0RC1
- Updated bundled MySQL client library to version 5.0.22 in the Windows
  distribution. (Edin)
- Updated timezonedb to version 2006.7. (Derick)

- Changed priority of PHPRC environment variable on win32 to be higher then
  value from registry. (Dmitry)
- Changed __toString() to be called wherever applicable. (Marcus)
- Changed E_ALL error reporting mode to include E_RECOVERABLE_ERROR. (Marcus)
- Changed realpath cache to be disabled when "open_basedir" or "safe_mode"
  are enabled on per-request basis. (Ilia)

- Improved the Zend memory manager: (Dmitry)
  . Removed unnecessary "--disable-zend-memory-manager" configure option.
  . Added "--enable-malloc-mm" configure option which is enabled by default
    in debug builds to allow using internal and external memory debuggers.
  . Allow tweaking the memory manager with ZEND_MM_MEM_TYPE and ZEND_MM_SEG_SIZE 
    environment variables.
  . For more information: Zend/README.ZEND_MM