@@ -670,6 +670,9 @@ static int ZEND_INIT_STATIC_METHOD_CALL_SPEC_CONST_HANDLER(ZEND_OPCODE_HANDLER_A
 		if(!ce->constructor) {
 			zend_error_noreturn(E_ERROR, "Can not call constructor");
 		}
+		if (Z_OBJCE_P(EG(This)) != ce->constructor->common.scope && ce->constructor->common.fn_flags & ZEND_ACC_PRIVATE) {
+			zend_error(E_COMPILE_ERROR, "Cannot call private %s::__constrcut()", ce->name);
+		}
 		EX(fbc) = ce->constructor;
 	}
 
@@ -871,6 +874,9 @@ static int ZEND_INIT_STATIC_METHOD_CALL_SPEC_TMP_HANDLER(ZEND_OPCODE_HANDLER_ARG
 		if(!ce->constructor) {
 			zend_error_noreturn(E_ERROR, "Can not call constructor");
 		}
+		if (Z_OBJCE_P(EG(This)) != ce->constructor->common.scope && ce->constructor->common.fn_flags & ZEND_ACC_PRIVATE) {
+			zend_error(E_COMPILE_ERROR, "Cannot call private %s::__constrcut()", ce->name);
+		}
 		EX(fbc) = ce->constructor;
 	}
 
@@ -1029,6 +1035,9 @@ static int ZEND_INIT_STATIC_METHOD_CALL_SPEC_VAR_HANDLER(ZEND_OPCODE_HANDLER_ARG
 		if(!ce->constructor) {
 			zend_error_noreturn(E_ERROR, "Can not call constructor");
 		}
+		if (Z_OBJCE_P(EG(This)) != ce->constructor->common.scope && ce->constructor->common.fn_flags & ZEND_ACC_PRIVATE) {
+			zend_error(E_COMPILE_ERROR, "Cannot call private %s::__constrcut()", ce->name);
+		}
 		EX(fbc) = ce->constructor;
 	}
 
@@ -1186,6 +1195,9 @@ static int ZEND_INIT_STATIC_METHOD_CALL_SPEC_UNUSED_HANDLER(ZEND_OPCODE_HANDLER_
 		if(!ce->constructor) {
 			zend_error_noreturn(E_ERROR, "Can not call constructor");
 		}
+		if (Z_OBJCE_P(EG(This)) != ce->constructor->common.scope && ce->constructor->common.fn_flags & ZEND_ACC_PRIVATE) {
+			zend_error(E_COMPILE_ERROR, "Cannot call private %s::__constrcut()", ce->name);
+		}
 		EX(fbc) = ce->constructor;
 	}
 
@@ -1275,6 +1287,9 @@ static int ZEND_INIT_STATIC_METHOD_CALL_SPEC_CV_HANDLER(ZEND_OPCODE_HANDLER_ARGS
 	} else {
 		if(!ce->constructor) {
 			zend_error_noreturn(E_ERROR, "Can not call constructor");
+		}
+		if (Z_OBJCE_P(EG(This)) != ce->constructor->common.scope && ce->constructor->common.fn_flags & ZEND_ACC_PRIVATE) {
+			zend_error(E_COMPILE_ERROR, "Cannot call private %s::__constrcut()", ce->name);
 		}
 		EX(fbc) = ce->constructor;
 	}
